/*
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        https://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
*/

syntax = "proto3";
import "SerializableOperator.proto";
package NES;

option java_package = "stream.nebula.protobuf";
option java_multiple_files = true;

/*
The serializable wrapper definition for query plan
 */
message SerializableDecomposedQueryPlan{
  map<uint64, SerializableOperator> operatorMap = 1;
  repeated uint64 rootOperatorIds = 2;
  optional uint64 decomposedQueryId = 3;
  optional uint64 sharedQueryPlanId = 4;
  optional SerializableQueryState state = 5;
}

enum SerializableQueryState {
  QUERY_STATE_REGISTERED = 0;
  QUERY_STATE_OPTIMIZING = 1;
  QUERY_STATE_DEPLOYED = 2;
  QUERY_STATE_RUNNING = 3;
  QUERY_STATE_MARKED_FOR_HARD_STOP = 4;
  QUERY_STATE_MARKED_FOR_SOFT_STOP = 5;
  QUERY_STATE_SOFT_STOP_TRIGGERED = 6;
  QUERY_STATE_SOFT_STOP_COMPLETED = 7;
  QUERY_STATE_STOPPED = 8;
  QUERY_STATE_MARKED_FOR_FAILURE = 9;
  QUERY_STATE_FAILED = 10;
  QUERY_STATE_RESTARTING = 11;
  QUERY_STATE_MIGRATING = 12;
  QUERY_STATE_MIGRATION_COMPLETED = 13;
  QUERY_STATE_EXPLAINED = 14;
  QUERY_STATE_REDEPLOYED = 15;
  QUERY_STATE_MARKED_FOR_REDEPLOYMENT = 16;
  QUERY_STATE_MARKED_FOR_DEPLOYMENT = 17;
  QUERY_STATE_MARKED_FOR_MIGRATION = 18;
}
